--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   </head>
   <body>
     <div id="root"></div>
+    <script
+      type="text/javascript"
+      src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=1u1yznf4x7"></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
